--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "undici": "5.22.1",
     "vite": "4.4.0",
     "vite-tsconfig-paths": "4.2.0"
+  },
+  "dependencies": {
+    "@sanity/client": "^6.2.0"
   }
 }
